--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
     </main>
 
     <script type="module" src="src/scripts/index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/4b18baa08d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
